Trying to fix mobile x-overflow

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,17 +11,9 @@ html {
 	overflow-x: hidden;
 }
 
-.current {
-	background-color: $btnRed;
-}
-
-nav, footer {
-	display: inline-block;
-	background-color: $navBlack;
-	width: 110%;
-	margin-top: -8px;
-	margin-left: -8px;
-	padding-left: 20%;
+body {
+	position: relative;
+	overflow-x: hidden;
 }
 
 footer {
@@ -29,35 +21,6 @@ footer {
     position: relative;
     height: 100px;
     margin-top: -200px;
-}
-
-nav a {
-	display: inline-block;
-	width: 14%;
-	height: 5%;
-	background-color: $navBlack;
-	margin-top: auto;
-	color: white;
-	text-align: center;
-	text-decoration: none;
-	transition: background-color 0.3s;
-	outline: none;
-}
-
-nav a:hover {
-	background-color: $btnRed;
-}
-
-.current:hover{
-	background-color: $navBlack;
-}
-
-nav img {
-	display: block;
-	float: left;
-	max-width: 8%;
-	min-width: 5%;
-	margin-left: -17%;
 }
 
 #banner {
@@ -105,8 +68,6 @@ p {
 	font-size: 1em;
 }
 
-
-
 ul {
 	padding-left: 0px;
 }
@@ -119,57 +80,6 @@ ul {
 	color: white;
 	text-decoration: none;
 	text-align: center;
-}
-
-/* Dropdown Button */
-.droplink {
-
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-	display: initial;
-	position: relative;
-	font-family: $siteFont;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-	display: none;
-	position: absolute;
-	width: 103.1%;
-	z-index: 1;
-	left: 0;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-	padding: 6% 1% 4% 6%;
-	text-decoration: none;
-	display: block;
-	background-color: $btnRed;
-	width: 90%;
-	text-align: left;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {font-weight: bold;}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
-
-/* Keep research button red */
-.dropdown:hover .droplink {background-color: $btnRed;}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.droplink:hover .droplink {background-color: $btnRed;}
-
-#menu-button {
-	display: none;
-}
-
-.arrowButton {
-	display: none;
 }
 
 #contentContainer h1 {
@@ -185,6 +95,6 @@ html, body {
 }
 
 /* For using footer */
-#twitter-wlinks, #research, #people, #contact {
+#c-content, #research, #people, #contact {
 	padding-bottom: 5%;
 }
